--- a/style.css
+++ b/style.css
@@ -63,6 +63,17 @@ img{
     display: block;
 }
 
+.p-top{
+    padding-top: 10rem;
+}
+.text-center{
+    text-align: center;
+}
+
+.mt-4{
+    margin-top: 4rem;
+}
+
 
 /* Header Styling */
 
@@ -119,12 +130,14 @@ img{
 
 
 /* Section Styling */
+
 .hero-section{
     min-width: calc(100vh - 14vh);
 }
 
 .content,
-.image-container{
+.image-container,
+.service-card{
     flex: 1;
     flex-basis: 300px;
 }
@@ -169,6 +182,40 @@ p{
 }
 
 
+/* Section 01 */
+
+h5{
+    font-size: 1.2rem;
+    letter-spacing: 0.2rem;
+    color: var(--gold-finger);
+    text-transform: uppercase;
+}
+
+h2{
+    font-size: 3.7rem;
+    text-transform: capitalize;
+    color: var(--lead);
+}
+
+h3{
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: var(--lead);
+}
+
+.service-card h3{
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+
+/* Section 02 */
+
+
+
+
+
+
 /* Footer Styling */
 
 
@@ -195,6 +242,7 @@ p{
 
     /* Sections Styling */
 
+    /* Hero Section */
     h1{
         font-size: 3.6rem;
     }
@@ -208,5 +256,10 @@ p{
 
     .gap-4{
         gap: 4rem;
+    }
+
+    /* Section 01 */
+    h2{
+        font-size: 3rem;
     }
 }
